Added linting to aoc workspace settings

--- a/aoc/.vscode/settings.json
+++ b/aoc/.vscode/settings.json
@@ -4,5 +4,6 @@
     "python.linting.banditEnabled": false,
     "python.linting.mypyEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.prospectorEnabled": false
+    "python.linting.prospectorEnabled": false,
+    "python.linting.flake8Args": ["--ignore=E231,N802,E226,W293,N806"]
 }
